# ckanext-sitemap

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/sitemap/: cli.py  plugin.py  sitemap.py  view.py
ckanext/sitemap/assets/: script.js  webassets.yml
ckanext/sitemap/tests/: test_plugin.py
