[metadata]
name = ckanext-sitemap
version = 0.0.1
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com//ckanext-sitemap
author = Datopain
author_email = support@datopian.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             sitemap = ckanext.sitemap.plugin:SitemapPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/sitemap/i18n/ckanext-sitemap.pot
width = 80

[init_catalog]
domain = ckanext-sitemap
input_file = ckanext/sitemap/i18n/ckanext-sitemap.pot
output_dir = ckanext/sitemap/i18n

[update_catalog]
domain = ckanext-sitemap
input_file = ckanext/sitemap/i18n/ckanext-sitemap.pot
output_dir = ckanext/sitemap/i18n
previous = true

[compile_catalog]
domain = ckanext-sitemap
directory = ckanext/sitemap/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
