[metadata]
name = ckanext-sitemap
version = 0.0.1
description = Sitemap implementation using SOLR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scastineyras/ckanext-sitemap
author = Sergio Castineyras
author_email = scastineyras@opengov.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN sitemap solr

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             sitemap = ckanext.sitemap.plugin:SitemapPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
